--- a/TheTestOfficeProject/TheTestOfficeProject.csproj
+++ b/TheTestOfficeProject/TheTestOfficeProject.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TCPData\TCPData.csproj" />
+    <ProjectReference Include="..\TCPExtension\TCPExtension.csproj" />
+  </ItemGroup>
+
 </Project>
